# blender-automate

./: .gitignore  Dockerfile  README.md  environment.blend  launch.bat  main.py  pyproject.toml  speckle_import.py
.github/workflows/: main.yml
installation/: connector.py
tests/: test_function.py
