[tool.poetry]
name = "blender-automate"
version = "0.1.0"
description = "Run Blender renders in Speckle automate to output images"
authors = ["Jedd Morgan <jedd@speckle.systems>", "Gergő Jedlicska <gergo@jedlicska.com>"]
readme = "README.md"
packages = [{include = ""}]

[tool.poetry.dependencies]
python = "^3.10"
specklepy = "^2.17.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.271"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "I",   # isort
]

[tool.ruff.pydocstyle]
convention = "google"
